--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
 
 <body>  
     <main class="main">  
-        <h1>База данных</h1>  
+        <h1>Microsoft Access</h1>  
         <div class="info-block__img-wrap">  
             <img src="img/pr/Снимок экрана 2024-11-19 225610.png" alt="фото 1"> 
             <img src="img/pr/Снимок экрана 2024-11-19 225700.png" alt="фото 2">  
@@ -57,5 +57,61 @@
         </div>  
     </main>  
 </body>  
-
+<body>  
+    <main class="main">  
+        <h1>BP win</h1>  
+        <div class="info-block__img-wrap">  
+            <img src="new/bp/photo_5294135547461234306_y.jpg" alt="фото 1"> 
+            <img src="new/bp/photo_5294214149657730877_y.jpg" alt="фото 1"> 
+             <img src="new/bp/photo_5294214149657730878_y.jpg" alt="фото 1"> 
+            <img src="new/bp/photo_5294214149657730879_y.jpg" alt="фото 1"> 
+             <img src="new/bp/photo_5294214149657730880_y.jpg" alt="фото 1"> 
+            <img src="new/bp/photo_5294214149657730881_y.jpg" alt="фото 1"> 
+        </div>  
+    </main>  
+</body> 
+<body>  
+    <main class="main">  
+        <h1>Создание клиентской части приложения для базы данных на Java Script</h1>  
+        <div class="info-block__img-wrap">  
+            <img src="new/java/photo_5294135547461234315_y.jpg" alt="фото 1"> 
+            <img src="new/java/photo_5294214149657730896_y.jpg" alt="фото 1"> 
+        </div>  
+    </main>  
+</body>  
+<body>  
+    <main class="main">  
+        <h1>Бд в PhPMyAdmin</h1>  
+        <div class="info-block__img-wrap">  
+            <img src="new/php/photo_5294214149657730885_y.jpg" alt="фото 1"> 
+            <img src="new/php/photo_5294214149657730886_y.jpg" alt="фото 1"> 
+            <img src="new/php/photo_5294214149657730887_y.jpg" alt="фото 1"> 
+            <img src="new/php/photo_5294214149657730888_y.jpg" alt="фото 1"> 
+            <img src="new/php/photo_5294214149657730889_y.jpg" alt="фото 1"> 
+            <img src="new/php/photo_5294214149657730890_y.jpg" alt="фото 1"> 
+        </div>  
+    </main>  
+</body>  
+ <body>  
+    <main class="main">  
+        <h1>Создание проекта помощью VBA в MS EXCEL, применение пользовательских форм</h1>  
+        <div class="info-block__img-wrap">  
+            <img src="new/vba/photo_5294214149657730899_y.jpg" alt="фото 1"> 
+            <img src="new/vba/photo_5294214149657730900_y.jpg" alt="фото 1"> 
+        </div>  
+    </main>  
+</body>  
+<body>  
+    <main class="main">  
+        <h1>Программирование VBA в EXCEL</h1>  
+        <div class="info-block__img-wrap">  
+            <img src="new/vba2/photo_5294135547461234317_y.jpg" alt="фото 1"> 
+            <img src="new/vba2/photo_5294214149657730905_y.jpg" alt="фото 1"> 
+            <img src="new/vba2/photo_5294214149657730906_y.jpg" alt="фото 1"> 
+            <img src="new/vba2/photo_5294214149657730907_y.jpg" alt="фото 1"> 
+            <img src="new/vba2/photo_5294214149657730908_y.jpg" alt="фото 1"> 
+            <img src="new/vba2/photo_5294214149657730909_y.jpg" alt="фото 1"> 
+        </div>  
+    </main>  
+</body>  
 </html>
