--- a/index.html
+++ b/index.html
@@ -6,86 +6,180 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <title>Арутюнян Ангелина</title>  
-    <link rel="stylesheet" href="./styles/main.css">  
     <link rel="preconnect" href="https://fonts.googleapis.com">  
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>  
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">  
     <style>  
         body {  
-            font-family: 'Times New Roman', Times, serif;  
+            font-family: 'DM Sans', sans-serif;  
             margin: 0;  
             padding: 0;  
             background: url('img/photo_5325976360524572080_y.jpg') no-repeat center center fixed;  
             background-size: cover;  
-            font-size: 16px;  
+            background-attachment: fixed;  
+            min-height: 100vh;  
             color: #333;   
-            position: relative;  
         }  
+
         .main {  
             max-width: 900px;  
-            margin: 0 auto;  
-            padding: 25px;  
+            margin: 30px auto;  
+            padding: 30px;  
             background-color: rgba(255, 255, 255, 0.95);   
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);  
+            border-radius: 15px;  
+            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.15);  
         }  
+
         .intro {  
             text-align: center;  
-            margin-bottom: 20px;  
+            margin-bottom: 30px;  
         }  
+
         .greeting__name {  
-            font-size: 40px;  
+            font-size: 42px;  
             font-weight: 700;  
-            margin-bottom: 15px;  
+            margin-bottom: 20px;  
             color: #2c503a;  
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.1);  
         }  
+
         nav {  
-            margin-top: 20px;  
+            margin: 30px 0;  
         }  
+
         .honors {  
             display: flex;  
             justify-content: center;  
-            gap: 30px;  
-            margin-top: 20px;  
+            gap: 25px;  
+            flex-wrap: wrap;  
         }  
+
         .honors a {  
-            font-size: 24px;  
-            font-weight: 500;  
+            font-size: 20px;  
+            font-weight: 600;  
             text-decoration: none;  
-            color: #3e8e5d;  
-            padding: 12px 18px;  
-            border: 2px solid transparent;    
+            color: #fff;  
+            background: linear-gradient(135deg, #3e8e5d 0%, #2c503a 100%);  
+            padding: 14px 28px;  
+            border-radius: 50px;  
             transition: all 0.3s ease;  
+            box-shadow: 0 4px 15px rgba(62, 142, 93, 0.3);  
         }  
-        
-          
+
+        .honors a:hover {  
+            transform: translateY(-3px);  
+            box-shadow: 0 6px 20px rgba(62, 142, 93, 0.4);  
+            background: linear-gradient(135deg, #4aae70 0%, #367a52 100%);  
+        }  
+
         .about-me {  
-            margin-top: 30px;  
+            margin-top: 40px;  
+            display: flex;  
+            align-items: center;  
+            gap: 40px;  
+            flex-wrap: wrap;  
+            justify-content: center;  
         }  
-        .about-me__info-block {  
-            margin-top: 20px;  
-        }  
+
         .info-block__img-wrap {  
-            margin: 0 auto;  
             width: 300px;  
+            height: 300px;  
+            border-radius: 50%;  
             overflow: hidden;   
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);  
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);  
+            border: 5px solid #f0f7f2;  
         }  
+
         .info-block__img-wrap img {  
             width: 100%;  
-            height: auto;  
-            transition: transform 0.3s ease;  
+            height: 100%;  
+            object-fit: cover;  
+            transition: transform 0.5s ease;  
         }  
+
+        .info-block__img-wrap:hover img {  
+            transform: scale(1.05);  
+        }  
+
+        .info-content {  
+            flex: 1;  
+            min-width: 300px;  
+            max-width: 500px;  
+        }  
+
         .info-block__text {  
-            margin-top: 15px;  
             font-size: 18px;  
-            line-height: 1.6;  
+            line-height: 1.7;  
             color: #345e48;  
+            margin-bottom: 25px;  
+            text-align: justify;  
         }  
-        h4 {  
-            margin-top: 10px;  
-            font-size: 16px;  
+
+        .contact-info {  
+            background: #f0f7f2;  
+            padding: 20px;  
+            border-radius: 10px;  
+            border-left: 4px solid #3e8e5d;  
+        }  
+
+        .contact-info h4 {  
+            margin: 0;  
+            font-size: 17px;  
             font-weight: 600;  
-            color: #7f8c8d;  
+            color: #2c503a;  
+            display: flex;  
+            align-items: center;  
+            gap: 10px;  
+        }  
+
+        .contact-info h4:before {  
+            content: "📱";  
+            font-size: 20px;  
+        }  
+
+        @media (max-width: 768px) {  
+            .main {  
+                margin: 15px;  
+                padding: 20px;  
+            }  
+
+            .greeting__name {  
+                font-size: 32px;  
+            }  
+
+            .honors {  
+                gap: 15px;  
+            }  
+
+            .honors a {  
+                padding: 12px 24px;  
+                font-size: 18px;  
+            }  
+
+            .about-me {  
+                flex-direction: column;  
+                text-align: center;  
+            }  
+
+            .info-block__img-wrap {  
+                width: 250px;  
+                height: 250px;  
+            }  
+        }  
+
+        @media (max-width: 480px) {  
+            .greeting__name {  
+                font-size: 28px;  
+            }  
+
+            .honors a {  
+                width: 100%;  
+                text-align: center;  
+            }  
+
+            .info-block__text {  
+                font-size: 16px;  
+            }  
         }  
     </style>  
 </head>  
@@ -96,27 +190,34 @@
             <div class="intro__content">  
                 <div class="content__greeting">  
                     <div class="greeting__name">Арутюнян Ангелина</div>  
-                </div>
-        <nav>  
+                </div>  
+
+                <nav>  
                     <div class="honors">  
-                        <h1><a href="one.html">Грамоты</a></h1>  
-                        <h1><a href="projects.html">Проекты</a></h1>  
+                        <a href="one.html">Грамоты и достижения</a>  
+                        <a href="projects.html">Проекты</a>  
                     </div>  
                 </nav>  
+
                 <div class="about-me">  
-                    <div class="about-me__info-block">  
-                        <div class="info-block__img-wrap">  
-                            <img src="img/photo_5325976360524572077_y.jpg" alt="фото меня">  
-                        </div>  
+                    <div class="info-block__img-wrap">  
+                        <img src="img/photo_5325976360524572077_y.jpg" alt="Арутюнян Ангелина">  
+                    </div>  
+
+                    <div class="info-content">  
                         <p class="info-block__text">  
-                            Я Арутюнян Ангелина, учусь в Амурском педагогическом колледже по специальности "информационные системы и программирование".  
+                            Привет! Меня зовут Арутюнян Ангелина. Я студентка Амурского педагогического колледжа,  
+                            обучаюсь по специальности "информационные системы и программирование".  
+                            Увлекаюсь разработкой программного обеспечения, созданием баз данных и веб-технологиями.  
                         </p>  
-                        <h4>Связаться со мной можно по номеру: +79244437331</h4>  
+
+                        <div class="contact-info">  
+                            <h4>Связаться со мной: +7 (924) 443-73-31</h4>  
+                        </div>  
                     </div>  
                 </div>  
             </div>  
         </div>  
     </main>  
 </body>  
-
 </html>
